fixed contact submit spacing issue

--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -913,7 +913,7 @@ body {
         font-size: 1.2rem;
         border: 1px solid blueviolet;
         padding: 1em;
-        border-radius: 8px;
+        border-radius: 0.5em;
         display: block;
         width: 100%;
         // margin-bottom: 1em;
@@ -933,7 +933,7 @@ body {
       }
       #input-submit {
         position: relative;
-        top: 1rem;
+        // top: 1rem;
         color: #fff;
         font-size: 30px;
         font-weight: bold;
@@ -961,10 +961,10 @@ body {
       margin-right: 2%;
     }
     .form-update-container {
-      height: 20em;
+      height: 21.5em;
       box-shadow: inset 0 0 10px hsl(300, 100%, 15%);
       background: hsl(271, 76%, 45%);
-      border-radius: 8px;
+      border-radius: 0.5em;
       color: #fff;
       display: flex;
       flex-direction: column;
@@ -1143,6 +1143,7 @@ body {
       form.cf-form {
         width: 90%;
         input#input-submit {
+          top: 1rem;
           position: relative;
           width: 80%;
           left: 50%;
